# getting_started_with_CDGS

./: .gitignore  LICENSE  README.md  data.py  dataset.py  gaussian_parameters.json  getting_started_with_CDGS.ipynb  models.py  plotter.py  pyproject.toml  requirements.txt  samplers.py  utils.py
