[project]
name = "getting-started-with-cdgs"
version = "0.1.0"
description = "A guide to Compositional Diffusion with Guided Search"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "diffusers>=0.35.1",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scipy>=1.15.3",
    "torch==2.8.0",
]
